// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToCartButton renders correctly when disabled 1`] = `
<DocumentFragment>
  <button
    class="w-full bg-highlight-1 p-3 rounded text-xl text-light-1 opacity-70"
    disabled=""
  >
    Out of stock
  </button>
</DocumentFragment>
`;

exports[`AddToCartButton renders correctly when enabled 1`] = `
<DocumentFragment>
  <button
    class="w-full bg-highlight-1 p-3 rounded text-xl text-light-1 "
  >
    Get in touch
  </button>
</DocumentFragment>
`;
